Bug 626954 - memory leak in MimeStartParamExists(); r=neil